<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="15dip"
    android:paddingLeft="15dip"
    android:paddingRight="15dip"
    android:paddingTop="40dip" >

    <TextView
        android:id="@+id/commonNameTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/common_name_string"
        android:textSize="@dimen/large_text" />

    <TextView
        android:id="@+id/commonNameView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:textSize="@dimen/med_text" />

    <TextView
        android:id="@+id/groupTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:text="@string/group_string"
        android:textSize="@dimen/med_text" />

    <Spinner
        android:id="@+id/spinnerGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingTop="10dp" />

    <TextView
        android:id="@+id/genusTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:text="@string/genus_string"
        android:textSize="@dimen/med_text" />

    <Spinner
        android:id="@+id/spinnerGenus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingTop="10dp" />

    <TextView
        android:id="@+id/speciesTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:text="@string/species_string"
        android:textSize="@dimen/med_text" />

    <Spinner
        android:id="@+id/spinnerSpecies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingTop="10dp" />

</LinearLayout>